# mgm

./: CMakeLists.txt  README.md  example.cpp  mgm.cpp  mgm.hpp
